bat.string1.lessons.bat.string1.StringX.scala.error
stringX:13: error: not found: value suppresion
    if(str.drop(i).take(1)=="x" && !suppresion)
                                    ^stringX:15: error: not found: value suppresion
      suppresion=true
      ^